# garuda-os

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  ARCHITECTURE.md  BOOTSTRAP.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  ENGINEERING.md  ENGINEERING_GOVERNANCE_v1.0.md  GAR-0001 Constitution.docx  GAR-0002.docx  GAR-0003.docx  GAR-0003A.docx  GAR-0004 - GARUDA ENGINEERING MANUAL BIBLE.docx  GAR-0005.docx  GAR-0006.docx  GAR-0007.docx  GAR-0008.docx  GAR-0009.docx  GAR-0010.docx  GAR-0011.docx  GAR-0012.docx  GAR-0013.docx  GAR-0014.docx  GAR-0015.docx  GAR-0016.docx  GAR-0017.md  GAR-0018.md  GAR-0019.md  GAR-0020.md  GAR-0021.md  GAR-CODEX-CONTEXT.md  GAR-DASHBOARD.docx  GAR-INDEX.docx  GAR-REFERENCE-0001.md  GAR-SPRINT-0001.docx  GAR-SPRINT-0002.docx  (+16 more)
.github/: PULL_REQUEST_TEMPLATE.md  README.md
agents/: README.md
apps/: README.md
docs/: README.md  developer-onboarding.md
engineering/: AGENTS.md  GARUDA_CONTEXT.md  GARUDA_GLOSSARY.md  GARUDA_NAVIGATION.md  GARUDA_WORKFLOW.md  PROMPTS.md
infrastructure/: README.md  backend.Dockerfile  frontend.Dockerfile
scripts/: README.md  dev_setup.py  run_checks.py  validate_docker.py  validate_repository_foundation.py  validate_toolchain.py
services/: README.md
templates/: README.md  approval.md  architecture-review.md  completion-report.md  implementation-plan.md  mission-completion-report.md  mission-specification.md  release-notes.md  sprint-closure-report.md  sprint-closure.md
tests/: README.md  test_action_chain_contract.py  test_action_input_provenance_framework.py  (+82 more)
(+546 files in other folders)
