[project]
name = "garuda"
version = "0.1.0a0"
description = "Garuda OS engineering foundation"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
  \.git
  | \.venv
  | __pycache__
  | node_modules
  | \.next
  | dist
  | build
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "node_modules",
  ".next",
  "dist",
  "build",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
